feat: nearbyAttraction returns the 5 closest attractions